--- a/WishList/Views/Shared/_Error.cshtml
+++ b/WishList/Views/Shared/_Error.cshtml
@@ -2,5 +2,5 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    <p>An error has occurred, homie. Please try again.</p>
+    <p>An error has occurred. Please try again.</p>
 }
