--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -6,7 +6,7 @@
     <h1>Wishlist</h1>
     <a asp-action="create">Add item</a>
     <ul>
-        @foreach (WishList.Models.Item item in Model)
+        @foreach (var item in Model)
         {
             <li>@item.Description<a asp-action="delete" asp-route-id=@item.Id>delete</a></li>
         }
